Use Java 25